--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,24 @@ body{
 .estudios{
     margin-top: 40px;
 }
+
+#foto{
+    width: 150px;
+    height: ¿20pxpx;
+    margin-top: 60px;
+    margin-left: 35px;
+    ;
+    
+}
+.box { 
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px; 
+    font-weight: 400;
+    color: rgb(0, 0, 0); 
+    text-align: center;    
+    background:hsl(337, 8%, 67%);
+    margin-top: 100px;
+    padding: 15px;
+    
+
+}
